# amazing-iot-device

./: .gitignore  .pdm-python  README.md  pyproject.toml  run.py
.github/commit-message/: .copilot-commit-message-instructions.md
.github/prompts/: get-pr-info.prompt.md  gitignore-generator.prompt.md  pdm-init.prompt.md  project-init.prompt.md  spec.md
src/amazing_iot_device/: __init__.py  auth.py  dashboard.py  models.py  mqtt_service.py  settings.py
src/amazing_iot_device/static/css/: styles.css
src/amazing_iot_device/templates/: base.html
src/amazing_iot_device/templates/auth/: login.html
src/amazing_iot_device/templates/dashboard/: index.html
src/amazing_iot_device/templates/settings/: edit.html  index.html  mqtt.html
src/cloud-service/: docker-compose.yaml
src/cloud-service/init-commands/: generate_user.py
src/cloud-service/mosquitto/config/: mosquitto.conf  setup-mosquitto-auth.sh
src/cloud-service/mqtt-receiver/: Dockerfile  receiver.py  requirements.txt
tests/: conftest.py  test_auth.py  test_dashboard.py  test_mqtt_receiver.py  test_mqtt_service.py  test_settings.py
