[project]
name = "amazing-iot-device"
version = "0.1.0"
description = ""
authors = [
    {name = "Tewang.Chiu", email = "tewang.chiu@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
