[project]
name = "amazing-iot-device"
version = "0.1.1"
description = "IoT device agent with Flask web interface"
authors = [
    {name = "Tewang.Chiu", email = "tewang.chiu@gmail.com"},
]
dependencies = [
    "flask>=2.3.0",
    "flask-login>=0.6.2",
    "flask-wtf>=1.1.1",
    "werkzeug>=2.3.0",
    "flask-sqlalchemy>=3.0.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "paho-mqtt>=2.1.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
start = "python3 run.py"
fix-style = "ruff check . --fix"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.9.10",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
]
